<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="welcome">欢迎加入头脑风暴!</string>
    <string name="app_name">成语接龙</string>

    <!-- Login -->
    <string name="login_input_area_logo_text">成语接龙</string>
    <string name="login_input_area_username">账号：</string>
    <string name="login_input_area_password">密码：</string>
    <string name="login_checkbox_remember_password_text">记住密码</string>
    <string name="login_button_login_text">登陆</string>
    <string name="login_button_config_text">网络配置</string>
    <string name="register_button_register_text">注册</string>

    <!-- Game -->
    <string name="game_player_list_text">玩家列表</string>
    <string name="game_player_one">玩家1</string>
    <string name="game_player_two">玩家2</string>
    <string name="game_player_three">玩家3</string>
    
    <!-- Menu -->
    <string name="vioceConfig">音效设置</string>
    <string name="about">游戏帮助</string>
    
    <!-- voice -->
    <string name="app_id">4f969b02</string>
    <string name="voice_title">语音输入</string>
    <string
		name="preference_key_iat_engine">iat_engine</string>
    <string
		name="preference_default_iat_engine">sms</string>
    <string
		name="preference_key_iat_rate">iat_rate</string>
    <string
		name="preference_default_iat_rate">rate16k</string>
    
</resources>